tests/neg/types.stk
var a: Int = 4

fun even(x: Int): Bool = x % 2 == 0

val b: Int = false // error

fun double(n: Int): Bool = n + n // error

fun param(a: Int, a: Int): Int = a // error

a = true     // error
a = even 3   // error
even false   // error

if a then    // error
  val z: Bool = 4 // error
  3 p

if even 3 then
  5
else
  even 4         // error


while a * 3 do    // error
  a p
